<resources>
    <string name="app_name">final_test</string>
    <string name="action_settings">Settings</string>
    <string name="show">显示</string>
    <string name="hide">隐藏</string>
    <string name="login_textViewTitle">1716466001 theTopScorerOfZuan</string>
    <string name="login_textViewLogin">用户登录</string>
    <string name="username">用  户  名</string>
    <string name="password">密&#160;&#160;&#160;&#160;&#160;&#160;码</string>
    <string name="registerUsername">用&#160;  户&#160;  名</string>
    <string name="registerPassword">密&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;码</string>
    <string name="confirmPassword">确认密码</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="previous">返回</string>
    <string name="user_hint">请输入您的手机号码</string>
    <string name="password_hint">6-12位密码包含英文和数字</string>
    <string name="auto_login">记住密码</string>
    <string name="startGame">开始游戏</string>
    <string name="rank">排行榜</string>
    <string name="backToLo">返回</string>
</resources>
