<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout xmlns:andriod="http://schemas.android.com/apk/res/android"
        andriod:id="@+id/login_interface"
        andriod:layout_width="wrap_content"
        andriod:layout_height="match_parent"
        andriod:visibility="visible">
        <RelativeLayout
            andriod:layout_width="match_parent"
            andriod:layout_height="wrap_content"
            andriod:background="@color/colorGrey"
            andriod:orientation="vertical">
            <TextView
                andriod:layout_width="wrap_content"
                andriod:layout_height="wrap_content"
                andriod:textSize="50dp"
                andriod:textColor="@color/colorWhite"
                andriod:text="@string/login_textViewLogin"
                andriod:layout_marginTop="80dp"
                andriod:layout_centerHorizontal="true"/>
            <LinearLayout
                andriod:layout_width="wrap_content"
                andriod:layout_height="wrap_content"
                andriod:layout_centerHorizontal="true"
                andriod:layout_marginTop="210dp">
                <TextView
                    andriod:layout_width="wrap_content"
                    andriod:layout_height="wrap_content"
                    andriod:text="@string/username"
                    andriod:textSize="25dp"
                    andriod:textColor="@color/colorWhite"/>
                <EditText
                    andriod:inputType="phone"
                    andriod:id="@+id/loginUsername"
                    andriod:layout_width="250dp"
                    andriod:layout_height="match_parent"
                    andriod:background="@drawable/edit_border"
                    andriod:layout_marginLeft="2dp"
                    andriod:shadowColor="@color/LightSkyBlue"
                    andriod:textColor="@color/colorWhite"
                    andriod:textSize="15dp"
                    andriod:hint="@string/user_hint"
                    andriod:textColorHint="@color/colorWhite"
                    andriod:textCursorDrawable="@drawable/cursor_style"/>
            </LinearLayout>
            <LinearLayout
                andriod:layout_width="wrap_content"
                andriod:layout_height="wrap_content"
                andriod:layout_centerHorizontal="true"
                andriod:layout_marginBottom="30dp"
                andriod:layout_marginTop="310dp">
                <TextView
                    andriod:layout_width="wrap_content"
                    andriod:layout_height="wrap_content"
                    andriod:text="@string/password"
                    andriod:textSize="25dp"
                    andriod:textColor="@color/colorWhite"/>
                <EditText
                    andriod:inputType="textPassword"
                    andriod:id="@+id/loginPassword"
                    andriod:layout_width="250dp"
                    andriod:layout_height="match_parent"
                    andriod:hint="@string/password_hint"
                    andriod:textColorHint="@color/colorWhite"
                    andriod:background="@drawable/edit_border"
                    andriod:layout_marginLeft="2dp"
                    andriod:textColor="@color/colorWhite"
                    andriod:textSize="15dp"
                    andriod:textCursorDrawable="@drawable/cursor_style"/>
            </LinearLayout>
        </RelativeLayout>
        <LinearLayout
            andriod:layout_width="match_parent"
            andriod:layout_height="wrap_content"
            andriod:layout_centerHorizontal="true"
            andriod:layout_marginTop="480dp"
            andriod:orientation="vertical">
            <LinearLayout
                andriod:layout_width="match_parent"
                andriod:layout_height="wrap_content"
                andriod:orientation="horizontal"
                andriod:layout_marginBottom="20dp"
                andriod:gravity="center_horizontal">
                <Button
                    andriod:id="@+id/loginBtn"
                    andriod:layout_width="wrap_content"
                    andriod:layout_height="70dp"
                    andriod:text="@string/login"
                    andriod:textColor="@color/colorWhite"
                    andriod:textSize="25dp"
                    andriod:layout_marginLeft="20dp"
                    andriod:background="@drawable/login_button_background"/>
                <Button
                    andriod:id="@+id/turnToRegister"
                    andriod:layout_width="wrap_content"
                    andriod:layout_height="70dp"
                    andriod:text="@string/register"
                    andriod:textColor="@color/colorWhite"
                    andriod:textSize="25dp"
                    andriod:layout_marginLeft="20dp"
                    andriod:background="@drawable/login_button_background"/>
            </LinearLayout>
            <LinearLayout
                andriod:layout_width="match_parent"
                andriod:layout_height="wrap_content"
                andriod:gravity="center_horizontal">
                <Button
                    andriod:id="@+id/rankList"
                    andriod:layout_width="246dp"
                    andriod:layout_height="70dp"
                    andriod:text="@string/rank"
                    andriod:textColor="@color/colorWhite"
                    andriod:textSize="25dp"
                    andriod:layout_marginLeft="20dp"
                    andriod:background="@drawable/login_button_background"/>
            </LinearLayout>
<!--            <Button-->
<!--                andriod:layout_width="wrap_content"-->
<!--                andriod:layout_height="wrap_content"-->
<!--                andriod:id="@+id/queryButton"-->
<!--                andriod:background="@color/colorGrey"/>-->
<!--            <Switch-->
<!--                andriod:layout_gravity="center"-->
<!--                andriod:layout_width="wrap_content"-->
<!--                andriod:layout_height="wrap_content"-->
<!--                andriod:id="@+id/auto_login"-->
<!--                andriod:text="@string/auto_login"/>-->
        </LinearLayout>

<!--        <EditText-->
<!--            andriod:layout_marginTop="630dp"-->
<!--            android:id="@+id/loginShowInfoEdit"-->
<!--            andriod:layout_width="match_parent"-->
<!--            andriod:layout_height="wrap_content"-->
<!--            />-->
    </RelativeLayout>



    <RelativeLayout xmlns:andriod="http://schemas.android.com/apk/res/android"
        andriod:visibility="gone"
        andriod:layout_height="match_parent"
        andriod:layout_width="match_parent"
        andriod:id="@+id/register_interface">
        <RelativeLayout
            andriod:layout_width="match_parent"
            andriod:layout_height="wrap_content"
            andriod:background="@color/colorGrey"
            andriod:orientation="vertical">
            <TextView
                andriod:layout_centerHorizontal="true"
                andriod:layout_marginTop="50dp"
                andriod:layout_width="wrap_content"
                andriod:layout_height="wrap_content"
                andriod:textSize="50dp"
                andriod:textColor="@color/colorWhite"
                andriod:text="@string/register"/>
            <LinearLayout
                andriod:layout_width="wrap_content"
                andriod:layout_height="wrap_content"
                andriod:layout_centerHorizontal="true"
                andriod:layout_marginTop="210dp">
                <TextView
                    andriod:layout_width="wrap_content"
                    andriod:layout_height="wrap_content"
                    andriod:text="@string/registerUsername"
                    andriod:textSize="25dp"
                    andriod:textColor="@color/colorWhite"/>
                <EditText
                    andriod:id="@+id/registerUsername"
                    andriod:layout_width="230dp"
                    andriod:layout_height="match_parent"
                    andriod:background="@drawable/edit_border"
                    andriod:layout_marginLeft="2dp"
                    andriod:shadowColor="@color/LightSkyBlue"
                    andriod:textColor="@color/colorWhite"
                    andriod:textSize="15dp"
                    andriod:hint="@string/user_hint"
                    andriod:textColorHint="@color/colorWhite"
                    andriod:textCursorDrawable="@drawable/cursor_style"/>
            </LinearLayout>
            <LinearLayout
                andriod:layout_width="wrap_content"
                andriod:layout_height="wrap_content"
                andriod:layout_centerHorizontal="true"
                andriod:layout_marginTop="280dp">
                <TextView
                    andriod:layout_width="wrap_content"
                    andriod:layout_height="wrap_content"
                    andriod:text="@string/registerPassword"
                    andriod:textSize="25dp"
                    andriod:textColor="@color/colorWhite"/>
                <EditText
                    andriod:inputType="textPassword"
                    andriod:id="@+id/registerPassword"
                    andriod:layout_width="230dp"
                    andriod:layout_height="match_parent"
                    andriod:hint="@string/password_hint"
                    andriod:textColorHint="@color/colorWhite"
                    andriod:background="@drawable/edit_border"
                    andriod:layout_marginLeft="2dp"
                    andriod:textColor="@color/colorWhite"
                    andriod:textSize="15dp"
                    andriod:textCursorDrawable="@drawable/cursor_style"/>
            </LinearLayout>
            <LinearLayout
                andriod:layout_width="wrap_content"
                andriod:layout_height="wrap_content"
                andriod:layout_centerHorizontal="true"
                andriod:layout_marginBottom="30dp"
                andriod:layout_marginTop="350dp">
                <TextView
                    andriod:layout_width="wrap_content"
                    andriod:layout_height="wrap_content"
                    andriod:text="@string/confirmPassword"
                    andriod:textSize="25dp"
                    andriod:textColor="@color/colorWhite"/>
                <EditText
                    andriod:inputType="textPassword"
                    andriod:id="@+id/confirmPassword"
                    andriod:layout_width="230dp"
                    andriod:layout_height="match_parent"
                    andriod:hint="@string/password_hint"
                    andriod:textColorHint="@color/colorWhite"
                    andriod:background="@drawable/edit_border"
                    andriod:layout_marginLeft="2dp"
                    andriod:textColor="@color/colorWhite"
                    andriod:textSize="15dp"
                    andriod:textCursorDrawable="@drawable/cursor_style"/>
            </LinearLayout>
        </RelativeLayout>
        <LinearLayout
            andriod:layout_width="match_parent"
            andriod:layout_height="wrap_content"
            andriod:layout_centerHorizontal="true"
            andriod:layout_marginTop="480dp"
            andriod:orientation="horizontal"
            andriod:gravity="center_horizontal">
            <Button
                andriod:id="@+id/registerBtn"
                andriod:layout_width="wrap_content"
                andriod:layout_height="70dp"
                andriod:text="@string/register"
                andriod:textColor="@color/colorWhite"
                andriod:textSize="25dp"
                andriod:layout_marginLeft="20dp"
                andriod:background="@drawable/login_button_background"/>
            <Button
                andriod:id="@+id/turnToLogin"
                andriod:layout_width="wrap_content"
                andriod:layout_height="70dp"
                andriod:text="@string/login"
                andriod:textColor="@color/colorWhite"
                andriod:textSize="25dp"
                andriod:layout_marginLeft="20dp"
                andriod:background="@drawable/login_button_background"/>
        </LinearLayout>
        <EditText
            andriod:layout_marginTop="600dp"
            android:id="@+id/registerShowInfoEdit"
            andriod:layout_width="match_parent"
            andriod:layout_height="wrap_content"
            android:ems="10"
            android:lines="5"
            android:text=""/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rankInterface"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGrey">
        <TextView
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textSize="40dp"
            android:textColor="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rank"/>
        <ListView
            android:id="@+id/listView"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/backToLo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backToLo"/>
    </RelativeLayout>
</FrameLayout>

